Tacked a banner pic on there
Tacked a banner pic on there

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<img src="https://scontent.fbed1-2.fna.fbcdn.net/v/t1.0-9/19665459_10156258569568942_1053817769032383152_n.jpg?oh=1767f804084e4af205b1a7726cf8b681&oe=5A093CFD" />
+
+
 <p>
 At Fox Den Farm, we follow strict organic farming practices.  We never use glyphosate (Roundup® and similar products), or any other herbicices or pesticides on our crops.  All of our seeds are non-GMO certified organic from <a href="http://www.johnnyseeds.com/?source=google_johnny_seeds&source=google_johnny_seeds&gclid=Cj0KEQjwv_fKBRCG8a3ao-OQuZ8BEiQAvpHp6M_F62lPQvT4V_gepNtmYWAUpU_nTDEDqgGLoITloZYaAsRj8P8HAQ
 " target=”_blank”> Johnny's Selected Seeds</a> in Maine.  We use organic potting soil from the <a href="http://www.vermontcompost.com" target="_blank">Vermont Compost Company®</a>, and fish-based organic fertilizer from <a href="http://www.neptunesharvest.com" target="_blank">Neptune's Harvest</a> in Massachusettes.
