header and SEO keywords added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Fox Den Farm, Lyndeborough, NH
 </title>
 
 <head>
-
+<meta name="KEYWORDS" content="vegetables delivered local organic non-gmo CSA community sponsored agriculture farm co-op business roundup glyphosate pesticide herbicide free" /> 
 </head>
 
 <p>
