Added a footer and contact info

--- a/index.html
+++ b/index.html
@@ -14,3 +14,11 @@ Welcome to my Fox Den Farm home page!  I'm Amy Trudeau.  I've been farming since
 " target=”_blank”> Johnny's Selected Seeds</a> in Maine.  I use organic potting soil from the <a href="http://www.vermontcompost.com" target="_blank">Vermont Compost Company®</a>, and fish-based organic fertilizer from <a href="http://www.neptunesharvest.com" target="_blank">Neptune's Harvest</a> in Massachusettes.
 </p>
 
+<footer>
+  <br />
+  <br />
+  <h5>
+    Contact: Amy Trudeau (603)-554-5596 dirtyfeetamy@yahoo.com
+  <!-- Need a site for your business? Contact TheWhitestZombie@PsycholicSWAG.com -->
+  </h5>
+
