--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Fox Den Farm, Lyndeborough, NH
 </title>
 
 <head>
-<meta name="KEYWORDS" content="vegetables delivered local organic non-gmo CSA community sponsored agriculture farm co-op business roundup glyphosate pesticide herbicide free" /> 
+<meta name="KEYWORDS" content="fox den farm vegetables delivered local organic non-gmo CSA community sponsored agriculture co-op business roundup glyphosate pesticide herbicide free" /> 
 </head>
 
 <p>
