Editing meta data keywords and description

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ Fox Den Farm, Lyndeborough, NH
 
 <head>
 <meta name="KEYWORDS" content="fox den farm vegetables delivered local organic non-gmo CSA community sponsored agriculture co-op business roundup glyphosate pesticide herbicide free" /> 
+<meta name="description" content="Foxden Farm, Lyndeborough, NH"/>
 </head>
 
 <p>
